2014-11-10  Mihnea Ovidenie  <mihnea@adobe.com>

        ASSERTION FAILED: !object || !object->parent()->isRuby() || is<RenderRubyRun>(*object) || (object->isInline() && (object->isBeforeContent() || object->isAfterContent())) || (object->isAnonymous() && ... ) in WebCore::isAnonymousRubyInlineBlock
        https://bugs.webkit.org/show_bug.cgi?id=137958

        Reviewed by Chris Dumez.

        * fast/multicol/newmulticol/ruby-from-multicol-to-auto-expected.txt: Added.
        * fast/multicol/newmulticol/ruby-from-multicol-to-auto.html: Added.

2014-11-13  Joanmarie Diggs  <jdiggs@igalia.com>

        AX: [ATK] Do not return ATK_ROLE_UNKNOWN for null or otherwise invalid accessible objects
        https://bugs.webkit.org/show_bug.cgi?id=137867

        Reviewed by Chris Fleizach.

        * platform/gtk/accessibility/detached-object-role-expected.txt: Added.
        * platform/gtk/accessibility/detached-object-role.html: Added.

2014-11-13  Joanmarie Diggs  <jdiggs@igalia.com>

        AX: [ATK] Accessible focus events are emitted when the selection is changed in non-focused combo boxes
        https://bugs.webkit.org/show_bug.cgi?id=137866

        Reviewed by Mario Sanchez Prada.

        * platform/gtk/accessibility/menu-list-unfocused-notifications-expected.txt: Added.
        * platform/gtk/accessibility/menu-list-unfocused-notifications.html: Added.

2014-11-06  Mark Lam  <mark.lam@apple.com>

        slow_path_get_direct_pname() needs to be hardened against a constant baseValue.
        <https://webkit.org/b/138476>

        Reviewed by Michael Saboff.

        * js/get-by-pname-expected.txt:
        * js/script-tests/get-by-pname.js:
        (getByPnameOnConstant):
        (getByPnameOnVar):
        - Added more test cases.

2014-11-06  Mark Lam  <mark.lam@apple.com>

        Refactor the get-by-pname.js test.
        <https://webkit.org/b/138483>

        Reviewed by Geoffrey Garen.

        Refactored the test code to: